--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <script src="app.js" charset="utf-8"></script>
         <link rel="stylesheet" href="style.css">
-        <title> Snake Tutorial </title>
+        <title> Hungry Snake </title>
     </head>
 <body>
 
@@ -12,7 +12,6 @@
     <div class="score"> Score:<span>0</span></div>
 
     <div class="grid">
-        <div class="snake"></div>
         <div></div>
         <div></div>
         <div></div>
@@ -24,7 +23,8 @@
         <div></div>
         <div></div>
         <div></div>
-        <div class="apple"></div>
+        <div></div>
+        <div></div>
         <div></div>
         <div></div>
         <div></div>
